update base package to io.github.ifengkou